tests/pass/void_stmt.tc
void ping() {
  return;
}

int main() {
  ping();
  return 0;
}
