tests/fail/void_as_value.tc
void ping() {
  return;
}

int main() {
  return ping();
}
